style.css
body,
section,
article,
footer {
  display: flex;
  flex-wrap: wrap;
  width: 100%;
}

footer {
  flex-direction: column;
  color: white;
  background-color: black;
  
}

.fonctionnement {
  display: flex;
  width: 100%;
}

.restaurants {
  display: flex;
  flex-wrap: wrap;
  justify-content: space-around;
  background-color: #f2f2f2;
}

.menu {
  align-items: flex-start;
  height: 1500px;
  margin-top: -50px;
  border-top-right-radius: 25px;
  border-top-left-radius: 25px;
  background-color: #f2f2f2;
}

.presentation {
  display: flex;
  flex-direction: column;
  justify-content: center;
  width: 100%;
  height: 230px;
  align-content: space-around;
  background-color: #f2f2f2;
}

nav {
  width: 100%;
  position: relative;
}

figure {
  display:flex
  flex-direction: column;
  position: relative;
  border-radius: 25px;
  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
  border: 1px solid black;
}

figcaption {
  height: 80px;
  padding-left: 10px;
  border-bottom-right-radius: 25px;
  border-bottom-left-radius: 25px;
  background-color: white;
}

.photo-resto {
  width: 310px;
  height: 150px;
  border-top-left-radius: 25px;
  border-top-right-radius: 25px;
  object-fit: cover;
}

.fonction {
  width: 280px;
  height: 40px;
  margin-bottom: 20px;
  padding-top: 20px;
  padding-left: 10px;
  border-radius: 25px;
  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
  background-color: #f2f2f2;
}

.conteneur-list {
  width: 100%;
  padding-left: 0;
  list-style: none;
}

.contenu-menu {
  width: 340px;
  margin-left: 15px;
  margin-bottom: 20px;
  border-radius: 25px;
  text-decoration: none;
  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
  background-color: white;
}

.contenu-foot {
  margin: 0;
  list-style: none;
}

.logo {
  width: 100%;
}

.baniere {
  width: 100%;
}

input {
  width: 100%;
  height: 50px;
  border-left: none;
  border-right: none;
  text-align: center;
  background-color: #D3D3D3;
}

.fa-map-marker-alt {
  position: absolute;
  left: 125px;
  top: 92px;
  color: black;
}

.titre-pre {
  text-align: center;
}

.texte-pre {
  text-align: center;
}

.titre-pre {
  text-align: center;
}

.bt-explorer,
.bt-commander{
  width: 210px;
  height: 25px;
  margin-left: 65px;
  border: none;
  border-radius: 25px;
  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
  text-align: center;
  color: white;
  background-color: #1E90FF;
}

.fa-mobile-alt,
.fa-list,
.fa-store {
  padding-right: 20px;
  color: #696969;
}

.fa-heart {
  position: absolute;
  top: 190px;
  left: 265px;
  font-size:30px
}

.titre-fonction {
  width: 100%;
  padding-left: 40px;
}

.titre-restaurant {
  width: 100%;
  padding-left: 40px;
}

h3 {
  width: 100%;
  margin-left: 15px;
  margin-top: 10px;
}

h2 {
  width: 100%;
  margin-left: 15px;
}

p,
b {
  margin-left: 15px;
}


@media screen and (min-width: 575px) {
  .presentation {
    flex-direction: column;
  }

  .titre-fonction {
    width: 100%;
    padding-left: 40px;
  }

  .fonctionnement {
    justify-content: center;
  }

  .titre-restaurant {
    width: 100%;
    padding-left: 40px;
  }

  .photo-resto {
    width: 280px;
  }

  .fa-heart {
    position: absolute;
    top: 190px;
    left: 215px;
    font-size:38px
  }

  .lien-foot {
    margin-left: 40px;
    margin-bottom: 40px;
    display: inline; 
  }
}

@media screen and (min-width: 992px) {
  .photo-resto {
    width: 360px;
  }
}

@media screen and (min-width: 1440px) {
  .photo-resto {
    width: 580px;
  }

  .fonction {
    display: inline;
    margin-left: 120px;
    margin-bottom: 80px;
  }

  .fa-heart {
    top: 190px;
    left: 470px;
  }
}

